# RustAstrology

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  DEVELOPMENT.md  FIXES_SUMMARY.md  README.md  Trunk.toml  apply_fixes.sh  build.rs  dev.sh  fix_and_run.sh  fix_cargo.sh  fix_harmonic.sh  fix_issues.sh  fix_lib.sh  harmonic_dial_fix.rs  index.html  package-lock.json  package.json  ritual.toml  run.sh  shell.nix  test-app.js
.windsurf/: agent-rules.md  architecture.md  astrology-concepts.md  context.md  development.md
.windsurf/workflows/: project-guide.md
pkg/: RustAstrology.js  RustAstrology_bg.wasm
qml/: DialComponent.qml  main.qml
src/: app.rs  lib.rs  lib.rs.app  lib.rs.backup  lib.rs.new  lib.rs.right_dial  lib_backup.rs  main.rs  main.rs.backup  main.rs.backup2  main_backup.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/astrology/: mod.rs
src/astrology/models/: planet.rs  zodiac.rs
src/astrology/uranian/: dial.rs
src/components/: left_dial.rs  mod.rs  right_dial.rs
src/components/dial/: mod.rs  renderer.rs  utils.rs
src/dial/: calculator.rs  component.rs  interaction.rs  mod.rs  renderer.rs  renderer360.rs  types.rs
src/models/: dial_settings.rs  harmonic.rs  mod.rs  planet.rs
src/ui/: mod.rs
src/ui/components/: dial_controller.rs  mod.rs
src/ui/qml/: DialComponent.qml
src/utils/: angle.rs  constants.rs  math.rs  mod.rs
