[package]
name = "RustAstrology"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RustAstrology"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
js-sys = "0.3.77"
leptos = { version = "0.7.0", features = ["csr"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Window", 
    "Document", 
    "Element", 
    "HtmlElement", 
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "WheelEvent",
    "DomRect",
    "KeyboardEvent",
    "EventTarget",
    "console"
]

[features]
default = ["wasm"]
wasm = ["getrandom/js"]
