[package]
name = "rust_astrology"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern astrology application built with Rust and WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dependencies]
# Core
leptos = { version = "0.5", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
    "DomRect",
] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# WebAssembly
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
