[package]
name = "rust-astrology"
version = "0.1.0"
description = "A modern astrology application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["api-all", "dialog-all", "fs-all", "http-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Re-export the main library
rust_astrology = { path = "../" }
