[package]
name = "rust-astrology"
version = "0.1.0"
description = "A modern astrology application built with Rust and Tauri"
authors = ["Your Name <your.email@example.com>"]
license = ""
repository = ""
default-run = "rust-astrology"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Add a specific dependency for the tokio runtime with desktop-compatible features
tokio = { version = "1.28", features = ["full"] }

[features]
# this is required to enable the custom protocol feature
# in development
custom-protocol = ["tauri/custom-protocol"]

# Define separate target-specific features
wasm = []
desktop = []

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
